# attenborofy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  render.yaml  requirements.txt
.github/workflows/: deploy-main.yml
backend/: app.py  app_config.py  config.json  gallery_store.py  jobs.py  pipeline.py  pyproject.toml  required_env.py  requirements.txt
backend/tests/: conftest.py  test_app_config.py  test_pipeline.py  test_required_env.py
frontend/: README.md  design.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FloatingUploadButton.tsx  Gallery.tsx  HomeGallery.tsx  Layout.tsx  LazyVideo.tsx  Logo.tsx  Processing.tsx  Result.tsx  UploadCard.tsx  VideoUpload.tsx
frontend/src/components/ui/: button.tsx  input.tsx  textarea.tsx
frontend/src/hooks/: useMediaQuery.ts
frontend/src/lib/: api.ts  processing-steps.ts
templates/: index.html
